--- a/frontEnd/src/styles/CustomerDetails.css
+++ b/frontEnd/src/styles/CustomerDetails.css
@@ -1,18 +1,43 @@
 .customer-detail-page {
   font-family: "Poppins", sans-serif;
-  max-width: 1100px;
+  max-width: 1300px;
+  width: 90%;
   margin: 0 auto;
   padding: 20px 0 40px 0;
 }
-
+.customer-title{
+  font-size: 2.5rem;
+  padding: 1em  1em 0 1em;
+  background: linear-gradient(90deg, rgb(110, 155, 197) 0%, rgb(255, 159, 57) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+    text-align: center;
+  font-weight: 600;
+  text-shadow: hsl(48, 100%, 50%) 1px 1px 8px;
+}
+.customer-title::after {
+  content: "";
+  display: block;
+  width: 150px;
+  height: 4px;
+  background-color: #ffc107;
+  margin: 12px auto 0;
+  border-radius: 2px;
+}
+.customer-title::before {
+  content: "★";
+  color: #ffc107;
+  font-size: 1rem;
+  margin-right: 8px;
+}
 .customer-photos {
   display: grid;
+  text-align: center;
   grid-template-columns: 4fr 2fr;
   grid-template-rows: repeat(2, 200px);
   gap: 8px;
   padding: 12px;
 }
-
 .customer-photos img {
   width: 100%;
   height: 100%;
@@ -35,7 +60,9 @@
   grid-row: auto;
   height: 100px;
 }
-
+.comments-title{
+  padding-bottom: 1rem;
+}
 .comment-block {
   padding: 2em 2em 0 2em;
   width: 100%;
@@ -255,21 +282,20 @@
 
 @media (max-width: 480px) {
   .customer-photos {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr / 1fr;
     grid-template-rows: auto;
   }
 
   .customer-photos img {
     height: 150px;
   }
-
   .comment-text {
-    margin: 0 1em 0 3.2em;
+    margin: 0 1em 0 1em;
     font-size: 12px;
   }
 
   .reply-section {
-    margin-left: 0.5em;
+    margin-left: 1em;
     padding-left: 0.5em;
   }
 
