--- a/frontEnd/src/styles/MyBookings.css
+++ b/frontEnd/src/styles/MyBookings.css
@@ -7,7 +7,25 @@
     overflow-y: auto; 
     padding: 20px;     
 }
-
+.theme{
+  font-weight: bold;
+  font-size: 2rem;
+}
+.theme::after {
+  content: "";
+  display: block;
+  width: 150px;
+  height: 4px;
+  background-color: #ffc107;
+  margin: 12px auto 0;
+  border-radius: 2px;
+}
+.theme::before {
+  content: "★";
+  color: #ffc107;
+  font-size: 1rem;
+  margin-right: 8px;
+}
 .mybooking-container {
     max-width: 80%;
     margin: auto;
@@ -32,8 +50,8 @@
     background: white;
     padding: 20px;
     border-radius: 12px;
-    width: 100%;        
-    height: 55vh;        
+    width: 90%;        
+    height: auto;        
     overflow: auto;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
@@ -50,7 +68,7 @@
     display: flex;
     justify-content: space-between;
   }
-  .cancel-btn {
+  .delete-booking{
     margin-top: 10px;
     padding: 6px 12px;
     background: #d32f2f;
@@ -59,7 +77,22 @@
     border-radius: 6px;
     cursor: pointer;
   }
-  .cancel-btn:hover {
+  .delete-booking:hover {
     background: #b71c1c;
   }
+  .cancel-btn {
+    margin-top: 12px;
+    padding: 4px 12px;
+    background: #ff9800;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    border: none;
+    display: inline-block;
+  }
+  
+  .cancel-btn:hover {
+    background: #f57c00;
+  }
+  
   
