--- a/frontEnd/src/styles/MyProfile.css
+++ b/frontEnd/src/styles/MyProfile.css
@@ -1,17 +1,25 @@
 .profile-card {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 1em;
+  overflow: hidden;
+  padding: 3rem 0 5rem 0 ;
 }
-
+.profile-title{
+  display: flex;
+  justify-content: center;
+  padding-top: 5rem ;
+}
 .profile-card label {
   display: flex;
   flex-direction: column;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .profile-card input {
-  padding: 6px;
+  padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
