--- a/frontEnd/src/styles/AdminSettings.css
+++ b/frontEnd/src/styles/AdminSettings.css
@@ -1,7 +1,7 @@
 .settings-container{
   width: 100%;
-  min-height: 90vh; /* fills screen at least */
-  height: auto;      /* allows content to grow */
+  min-height: 90vh; 
+  height: auto;    
   font-family: "Poppins", sans-serif;
   text-align: center;
   box-sizing: border-box;
